--- a/React/public/manifest.json
+++ b/React/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React App (Movie)",
+  "name": "Create React App Sample (Movie)",
   "icons": [
     {
         "src": "/android-chrome-96x96.png",
